--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
-// @import "normalize";
-// @import "welcome";
-// @import "posts_projects";
+@import "normalize";
+@import "welcome";
+@import "posts_projects";
 // @import "contact";
 
 * {
