--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
 
   <body>
    <header id="mainnav" class="clearfix">
-      <a href="#" class="name">Mohamed Soliman</a>
+   <%= link_to "Mohamed Soliman", root_path, class: "name" %>
+     
       <nav>
         <%= link_to "Articles", posts_path %>
         <a href="projects.html">Projects</a>
@@ -24,5 +25,15 @@
 
 
     <%= yield %>
+
+     <footer id='mainfooter'>
+    <p class='copyright'>©2020 Mohamed Soliman</p>
+    <nav>
+      <a href="#" target= "_blank"><i class="fas fa-at"></i></a>
+      <a href="#" target= "_blank"><i class="fab fa-github"></i></a>
+      <a href="#" target= "_blank"><i class="fab fa-facebook"></i></a>
+    </nav>
+  </footer>
+
   </body>
 </html>
