--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,36 @@
-<%= @post.title %><br>
-<%= @post.content %>
+
+<div id="posts_show_content" class="skinny_wrapper wrapper_padding"
+  >
+   <header>
+      <p class="date"><%= @post.created_at.strftime('%A, %B, %d')%> </p>
+      <br>
+      <h1><%= @post.title %></h1>
+      <hr>
+    </header>
+    <div id="content"></div>
+        <%= markdown @post.content %>
+    
+       <hr>
+        <div id="share_box">
+          <p>Share the Do List</p>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+        
+       </div>
+       <hr>
+  </div>
+  
+    <div class="pagination">
+      <span class="previous_page disabled">← Previous</span>
+      <em class="current">1</em>
+      <a rel="next" href="#">2</a>
+      <a class="next_page" href="#">Next →</a>
+  </div>
+
+
+
+
+
+ 
 
 <br>
 <br>
